Modificado scripts para ejecutar pruebas mientras el servidor corre

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,5 +37,5 @@ jobs:
       - name: Run echo
         run: echo "Hola"
 
-      - name: Start the application
-        run: npm start
+      - name: Run tests and start application
+        run: npm run test:serve
