Add mainService and userService

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,3 +44,5 @@ jobs:
         run: |
           cd userService
           npm run test
+      - name: Echo message
+        run: echo "Hello from UserService"
