--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "echo 'MainService Tests'",
+    "test": "jest & echo 'MainService Tests'",
     "test:serve": "node src/index.js & npm test"
   },
   "repository": {
