--- a/package.json
+++ b/package.json
@@ -1,30 +1,23 @@
 {
   "name": "practica_curso_devops2",
   "version": "1.0.0",
-  "description": "Este es mi segundo ejercicio Practico en este curso de DEVOPS con CODE SPACE - CRUZ ROJA MALAGA",
+  "description": "PRACTICA 3.",
   "main": "index.js",
+  "directories": {
+    "test": "tests"
+  },
   "scripts": {
     "start": "node src/index.js",
-    "test": "jest",
+    "test": "jest & echo 'MainService Tests'",
     "test:serve": "node src/index.js & npm test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/RaulMF40/Practica_Curso_DevOps2.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/RaulMF40/Practica_Curso_DevOps2/issues"
-  },
-  "homepage": "https://github.com/RaulMF40/Practica_Curso_DevOps2#readme",
   "dependencies": {
+    "@flydotio/dockerfile": "^0.5.9",
     "express": "^4.21.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
-  },
-  "devDependencies": {
-    "@flydotio/dockerfile": "^0.5.8"
   }
 }
