--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -1,37 +1,18 @@
-name: Deploy SUPERAPI to Fly.io
+# See https://fly.io/docs/app-guides/continuous-deployment-with-github-actions/
 
-# Ejecutar solo cuando haya cambios en la rama CICD
+name: Fly Deploy
 on:
   push:
     branches:
-      - CICD
-
+      - main
 jobs:
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
-
-    concurrency: deploy-group # Asegurar que solo una acción se ejecute a la vez
-
+    concurrency: deploy-group    # optional: ensure only one action runs at a time
     steps:
-      # Paso 1: Checkout del código
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      # Paso 2: Instalar Flyctl
-      - name: Setup Flyctl
-        uses: superfly/flyctl-actions/setup-flyctl@master
-
-      # Paso 3: Instalar dependencias
-      - name: Install dependencies
-        run: npm install
-
-      # Paso 4: Ejecutar tests
-      - name: Run tests
-        run: npm test
-
-      # Paso 5: Desplegar la aplicación en Fly.io
-      - name: Deploy to Fly.io
-        run: flyctl deploy --remote-only
+      - uses: actions/checkout@v4
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
